--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,39 @@ header {
   color: white;
   margin: 5px;
 }
+table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  margin: auto;
+  max-width: 800px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table tbody tr {
+  border-bottom: 1px solid #f3f3f3;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+thead tr {
+  background-color: #009879;
+  color: #fff;
+  font-weight: bold;
+}
+
+table th,
+table td {
+  padding: 10px 12px;
+}
+
+tbody {
+  text-align: left;
+}
