--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@ body {
   padding: 0;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4 {
   text-align: center;
 }
 
@@ -16,6 +19,19 @@ header {
   text-decoration: none;
   color: white;
   margin: 5px;
+}
+.table-link {
+  text-decoration: none;
+  color: black;
+}
+
+.back-link {
+  text-decoration: none;
+  color: black;
+  margin: 300px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 2px 5px;
 }
 table {
   border-collapse: collapse;
